Added final methods for addresses